# auth-microservice

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.py  conftest.py  docker-compose.db-only.yml  docker-compose.monitoring-only.yml  docker-compose.monitoring.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 44c1963362b9_add_refresh_token_table_v2.py  5b51c69daf7b_add_refresh_token_table.py  7bae8c635f3a_description.py  845fec99da2d_add_user_roles.py  9fcb2abf830e_initial_migration.py  c0424e4b117a_fix_created_at_default_to_use_current_.py  c7e6045d9277_fix_created_at_default_to_use_current_.py  cb09b7d396e7_add_full_name_field_to_users_table.py  f0fcfdca0ace_initial_migration.py
app/: database.py  main.py
app/models/: roles.py  user.py
app/schemas/: user.py
docs/: AUTHENTICATION.md
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: auth-service.json
src/: logging_config.py
src/api/: dependencies.py  main.py
src/api/routers/: admin.py  auth.py  health.py
src/api/schemas/: auth.py  user.py
src/domain/entities/: refresh_token.py  user.py
src/domain/interfaces/: refresh_token_repository.py  user_repository.py
src/domain/use_cases/: auth_service.py  register_user_usecase.py
src/infrastructure/database/: session.py
src/infrastructure/database/models/: refresh_token.py  user.py
src/infrastructure/database/repositories/: refresh_token_repository.py  user_repository.py
src/infrastructure/monitoring/: metrics.py
src/infrastructure/security/: password_service.py  token_service.py
tests/: test_admin.py  test_auth.py  test_auth_service_comprehensive.py  test_database_session_simple.py  test_db.py  test_health.py  test_health_comprehensive.py  test_models.py  test_register_user_usecase.py  test_schemas.py  test_security.py  test_user_entity.py  tests_health.py
